--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 port: 3000
 host: 0.0.0.0
-incremental: true
 sass:
   style: compress
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
